--- a/show_me_the_pets_client/src/App.css
+++ b/show_me_the_pets_client/src/App.css
@@ -59,4 +59,6 @@ th {
 
 .pet-pic {
   height: 30vh;
+  border: 1px dashed #ddd;
+	box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #eee;
 }
