add bunny option image

--- a/show_me_the_pets_client/src/App.css
+++ b/show_me_the_pets_client/src/App.css
@@ -52,9 +52,13 @@ th {
   background-color: #ffd27f;
 }
 
-.select-pet {
+tr:hover {
+  background-color: rgba(0,0,0,0.1);
   cursor: pointer;
-  color: darkorange;
+}
+
+.select-pet {
+  font-weight: bold;
 }
 
 .pet-pic {
