add nav link hover

--- a/show_me_the_pets_client/src/App.css
+++ b/show_me_the_pets_client/src/App.css
@@ -25,6 +25,11 @@ table {
   cursor: pointer;
 }
 
+.nav-link:hover {
+  color: orange;
+  font-weight: bold;
+}
+
 #search {
   margin-bottom: 2vw;
 }
